[package]
name = "soltnet"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "soltnet"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
clap = { version = "4.5.20", features = ["derive"] }
hex = "0.4.3"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
solana-address-lookup-table-interface = { version = "3.0.0", features = ["bincode", "bytemuck"] }
solana-commitment-config = "3.1.0"
solana-rpc-client = "3.1.8"
solana-sdk = "3.0.0"
solana-transaction-status = "3.1.8"
solana-system-transaction = "3.0.0"
